First contents inspired in MetricsGrimoire web page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">VizGrimoire</h1>
-        <p class="header">Web pages</p>
+        <p class="header">Tools for Viz Software Analytics</p>
 
 
 
@@ -27,38 +27,48 @@
 
       </header>
       <section>
-        <h3>Welcome VizGrimoire project</h3>
+        <h3>VizGrimoire project</h3>
+        
+        
+	<p>Viz Grimoire (usually pronounced in the French way) is a framework to visualize software analytics based in metrics for data from repositories related to software development: source code management (aka version control) and issue tracking (aka bug reporting) systems, mailing lists, etc. </p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+	<p>Viz Grimoire tools support now Metrics Grimoire (CVSAnalY, Bicho and MailingListStats) data. </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+	<p>Viz Grimoire has its origins in the <a href="http://bitergia.com">Bitergia company</a>, a spin-off company of LibreSoft research providing professional services around Software Analytics.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<h3>Designer Templates</h3>
+	<h2>Main tools</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+	<p>The following is a list of the current set of tools with a brief description. If you are interested in more information, please visit each of the pages per tool or read the install or readme files.</p>
+	
+	<h3><a href="VizGrimoireR">VizGrimoireR</a></h3>
 
-<h3>Rather Drive Stick?</h3>
+	<p>Extract software metrics from MetricsGrimoire tools.</p>
+	
+	<p><a href="https://github.com/VizGrimoire/VizGrimoireR">Repository at GitHub</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+	<h3><a href="VizGrimoireJS">VizGrimoireJS</a></h3>
 
-<h3>Authors and Contributors</h3>
+	<p>Create dashboards and reports from software metrics.</p>
+	
+	<p><a href="https://github.com/VizGrimoire/VizGrimoireJS">Repository at GitHub</a></p>
+	
+	<h2>Source code, reporting bugs, communication</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+	<p>There are several resources that can be of use for getting the source code, contributing, reporting bugs, or just communicating with developers:</p>
 
-<h3>Support or Contact</h3>
+	<ul>
+	  <li>IRC channel: we usually hang out at <a href="irc://irc.freenode.net/metrics-grimoire">#metrics-grimoire</a> in <a href="http://freenode.net/">freenode</a> (<a href="http://webchat.freenode.net/?nick=webchat..&channels=metrics-grimoire&prompt=1">access via webchat</a>)</li>
+	  <li>Mailing list: <a href="https://lists.libresoft.es/listinfo/metrics-grimoire">metrics-grimoire</a> at lists.libresoft.es, for developers, contributors and users (<a href="https://lists.libresoft.es/pipermail/metrics-grimoire/">archives are available</a>)</li>
+	  <li>Source code: available in several git repositories at the <a href="https://github.com/vizgrimoire">VizGrimoire GitHub project</a></li>
+	  <li>Submitting bug reports: we use the GitHub issue tracking system ("Issues" tab in each of the repositories of the <a href="https://github.com/vizgrimoire">VizGrimoire GitHub project</a></li>
+	</ul>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->		
   </body>
 </html>
