Added the architecture viz to understand better the full picture.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>VizGrimoire by VizGrimoire</title>
+    <title>Viz Grimoire by Viz Grimoire</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">VizGrimoire</h1>
+        <h1 class="header">Viz Grimoire</h1>
         <p class="header">Tools for Viz Software Analytics</p>
 
 
@@ -27,15 +27,16 @@
 
       </header>
       <section>
-        <h3>VizGrimoire project</h3>
+        <h3>Viz Grimoire project</h3>
         
         
 	<p>Viz Grimoire (usually pronounced in the French way) is a framework to visualize software analytics based in metrics for data from repositories related to software development: source code management (aka version control) and issue tracking (aka bug reporting) systems, mailing lists, etc. </p>
 
-	<p>Viz Grimoire tools support now Metrics Grimoire (CVSAnalY, Bicho and MailingListStats) data. </p>
+	<p>Viz Grimoire tools supports now Metrics Grimoire (CVSAnalY, Bicho and MailingListStats) data. </p>
 
 	<p>Viz Grimoire has its origins in the <a href="http://bitergia.com">Bitergia company</a>, a spin-off company of LibreSoft research providing professional services around Software Analytics.</p>
 
+	<p><a href="VizGrimoireJS.png">Viz Grimoire Architecture</a></p>
 
 	<h2>Main tools</h2>
 
