Removed not working links

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
 	<p>The following is a list of the current set of tools with a brief description. If you are interested in more information, please visit each of the pages per tool or read the install or readme files.</p>
 	
-	<h3><a href="VizGrimoireR">VizGrimoireR</a></h3>
+	<h3>VizGrimoireR</h3>
 
 	<p>Extract software metrics from MetricsGrimoire tools.</p>
 	
 	<p><a href="https://github.com/VizGrimoire/VizGrimoireR">Repository at GitHub</a></p>
 
-	<h3><a href="VizGrimoireJS">VizGrimoireJS</a></h3>
+	<h3>VizGrimoireJS</h3>
 
 	<p>Create dashboards and reports from software metrics.</p>
 	
