--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Viz Grimoire by Bitergia</title>
+    <title>vizGrimoire</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,10 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Viz Grimoire</h1>
-        <p class="header">Tools for Viz Software Analytics</p>
-
-
+        <h1 class="header">vizGrimoire</h1>
+        <p class="header">Analyzing and visualizing software development</p>
 
         <ul>
           <li><a class="buttons github" href="https://github.com/VizGrimoire">GitHub Profile</a></li>
@@ -27,31 +25,25 @@
 
       </header>
       <section>
-        <h3>Viz Grimoire project</h3>
+        <h2>The vizGrimoire project</h2>
         
         
-	<p>Viz Grimoire (usually pronounced in the French way) is a framework to visualize software analytics based in metrics for data from repositories related to software development: source code management (aka version control) and issue tracking (aka bug reporting) systems, mailing lists, etc. </p>
+	<p>vizGrimoire (usually pronounced /ˌvɪzɡrɪmˈwɑr/) is a toolset and framework to analyze and visualize data about software development. Currently, it is focused on data produced by the <a href="http://metricsgrimoire.github.io">MetricsGrimoire tools</a> (CVSAnalY, Bicho and MailingListStats).</p>
 
-	<p>Viz Grimoire tools supports now Metrics Grimoire (CVSAnalY, Bicho and MailingListStats) data. </p>
+	<p>vizGrimoire is promoted by <a href="http://bitergia.com">Bitergia</a>, the company providing software develoment analytics services, but it is a project open to the community.</p>
 
-	<p>Viz Grimoire has its origins in the <a href="http://bitergia.com">Bitergia company</a>, a spin-off company of LibreSoft research providing professional services around Software Analytics.</p>
+	<p>The following is a list of the current set of tools with a brief description. For more information, visit each of tool repositories, and/or read their install and readme files. You can also have a glimpse of the intended <a href="VizGrimoireJS.png">vizGrimoire architecture</a>.</p>
 
-	<p><a href="VizGrimoireJS.png">Viz Grimoire Architecture</a></p>
+	<h3>vizGrimoireR</h3>
 
-	<h2>Main tools</h2>
-
-	<p>The following is a list of the current set of tools with a brief description. If you are interested in more information, please visit each of the pages per tool or read the install or readme files.</p>
-	
-	<h3>VizGrimoireR</h3>
-
-	<p>Extract software metrics from MetricsGrimoire tools.</p>
+	<p>Analyze data in databases produced by MetricsGrimoire tools from software development repositories (source code management systens, issue tracking systems, mailing lists, etc.).</p>
 	
 	<p><a href="https://github.com/VizGrimoire/VizGrimoireR">Repository at GitHub</a></p>
 
-	<h3>VizGrimoireJS</h3>
+	<h3>vizGrimoireJS</h3>
 
-	<p>Create dashboards and reports from software metrics.</p>
-	
+	<p>JavaScript framework to create dashboards and interactive reports and visualizations from data produced by vizGrimoireJS</p>
+
 	<p><a href="https://github.com/VizGrimoire/VizGrimoireJS">Repository at GitHub</a></p>
 	
 	<h2>Source code, reporting bugs, communication</h2>
@@ -61,8 +53,8 @@
 	<ul>
 	  <li>IRC channel: we usually hang out at <a href="irc://irc.freenode.net/metrics-grimoire">#metrics-grimoire</a> in <a href="http://freenode.net/">freenode</a> (<a href="http://webchat.freenode.net/?nick=webchat..&channels=metrics-grimoire&prompt=1">access via webchat</a>)</li>
 	  <li>Mailing list: <a href="https://lists.libresoft.es/listinfo/metrics-grimoire">metrics-grimoire</a> at lists.libresoft.es, for developers, contributors and users (<a href="https://lists.libresoft.es/pipermail/metrics-grimoire/">archives are available</a>)</li>
-	  <li>Source code: available in several git repositories at the <a href="https://github.com/vizgrimoire">VizGrimoire GitHub project</a></li>
-	  <li>Submitting bug reports: we use the GitHub issue tracking system ("Issues" tab in each of the repositories of the <a href="https://github.com/vizgrimoire">VizGrimoire GitHub project</a></li>
+	  <li>Source code: available in several git repositories at the <a href="https://github.com/vizgrimoire">vizGrimoire GitHub project</a></li>
+	  <li>Submitting bug reports: we use the GitHub issue tracking system ("Issues" tab in each of the repositories of the <a href="https://github.com/vizgrimoire">vizGrimoire GitHub project</a></li>
 	</ul>
 
       </section>
