--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
 	<p>vizGrimoire (usually pronounced /ˌvɪzɡrɪmˈwɑr/) is a toolset and framework to analyze and visualize data about software development. Currently, it is focused on data produced by the <a href="http://metricsgrimoire.github.io">MetricsGrimoire tools</a> (CVSAnalY, Bicho and MailingListStats).</p>
 
-	<p>vizGrimoire is promoted by <a href="http://bitergia.com">Bitergia</a>, the company providing software develoment analytics services, but it is a project open to the community.</p>
+	<p>vizGrimoire is promoted by <a href="http://bitergia.com">Bitergia</a>, the company providing software develoment analytics services, but it is a project open to the community: you are welcome to participate.</p>
 
 	<p>The following is a list of the current set of tools with a brief description. For more information, visit each of tool repositories, and/or read their install and readme files. You can also have a glimpse of the intended <a href="VizGrimoireJS.png">vizGrimoire architecture</a>.</p>
 
