Clarification on metrics-grimoire mailing list.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<ul>
 	  <li>IRC channel: we usually hang out at <a href="irc://irc.freenode.net/metrics-grimoire">#metrics-grimoire</a> in <a href="http://freenode.net/">freenode</a> (<a href="http://webchat.freenode.net/?nick=webchat..&channels=metrics-grimoire&prompt=1">access via webchat</a>)</li>
-	  <li>Mailing list: <a href="https://lists.libresoft.es/listinfo/metrics-grimoire">metrics-grimoire</a> at lists.libresoft.es, for developers, contributors and users (<a href="https://lists.libresoft.es/pipermail/metrics-grimoire/">archives are available</a>)</li>
+	  <li>Mailing list: <a href="https://lists.libresoft.es/listinfo/metrics-grimoire">metrics-grimoire</a> at lists.libresoft.es, for developers, contributors and users (<a href="https://lists.libresoft.es/pipermail/metrics-grimoire/">archives are available</a>, joint list with the MetricsGrimoire project)</li>
 	  <li>Source code: available in several git repositories at the <a href="https://github.com/vizgrimoire">vizGrimoire GitHub project</a></li>
 	  <li>Submitting bug reports: we use the GitHub issue tracking system ("Issues" tab in each of the repositories of the <a href="https://github.com/vizgrimoire">vizGrimoire GitHub project</a></li>
 	</ul>
